--- a/templates/marble.html
+++ b/templates/marble.html
@@ -11,10 +11,10 @@
         <!--/.bg-holder-->
         <div class="container">
             <div class="overflow-hidden">
-                <h1 class="fs-5 fs-sm-6 text-white mt-6 mb-3" data-zanim-xs='{"delay":0}'>MARBLES</h1>
+                <h1 class="fs-5 fs-sm-6 text-white mt-6 mb-3" data-zanim-xs='{"delay":0}'>{{category.inner_title}}</h1>
             </div>
             <div class="overflow-hidden">
-                <h4 class="ls fw-light text-uppercase text-300 mb-0" data-zanim-xs='{"delay":0.1}'>gorgeous stones</h4>
+                <h4 class="ls fw-light text-uppercase text-300 mb-0" data-zanim-xs='{"delay":0.1}'>{{category.inner_subtitle}}</h4>
             </div>
         </div>
         <!-- end of .container-->
@@ -28,20 +28,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-10 col-lg-8">
-                    <h3 class="mb-4">Marble is gorgeous stones that offer classic
-                        beauty</h3>
-                    <p class="mb-7">Consisting primarily of calcite and
-                        dolomite or a combination of both minerals.
-                        Marbles are easy maintain and can be re
-                        polished if you need to bring shine back. It is a
-                        porous material so if strong stain material is
-                        spilled on marble, it is recommended to wipe
-                        it quickly so that the marble does not absorb
-                        the stain. There is enormous amount of waste
-                        generated in cutting the marble tiles. Inserting
-                        marbles in floors is very much time consuming.
-                        Marble is weak to acidic products, such as
-                        tomato vinegar and lemon.</p>
+                    <h3 class="mb-4">{{category.sub_title}}</h3>
+                    <p class="mb-7">{{category.description}}</p>
                 </div>
             </div>
             <!-- <div class="row">
@@ -59,10 +47,11 @@
         <div class="container bg-white pt-5">
 
             <div class="row">
+                {% for product in products %}
                 <div
                     class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
                     <div class="product"> <img
-                            src="https://img.freepik.com/free-photo/black-marble-patterned-texture-background-marble-thailand-abstract-natural-marble-black-white-design_1253-917.jpg?w=1380&t=st=1679046047~exp=1679046647~hmac=5122f14e2928c6f4615a99fcbd76a576f27af833b87a7d04f30692c2a0f59889"
+                            src="{{ product.image.url }}"
                             alt="">
                         <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
                             <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
@@ -70,147 +59,14 @@
                             <li class="icon"><span class="fas fa-shopping-bag"></span></li>
                         </ul>
                     </div>
-                    <div class="tag bg-red">sale</div>
-                    <div class="title pt-4 pb-1">Winter Sweater</div>
+                    <div class="title pt-4 pb-1">{{ product.title }}</div>
                     <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
                         <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
                             class="fas fa-star"></span> <span class="fas fa-star"></span>
                     </div>
-                    <div class="price">$ 60.0</div>
+                    <div class="price">${{ product.price }}</div>
                 </div>
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-photo/close-up-black-marble-textured-background_53876-63511.jpg?w=1380&t=st=1679046089~exp=1679046689~hmac=9bd70ae5347312da920f875920578529a785122b5e6b3ba5fd3ef99771fd2363"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="tag bg-black">out of stock</div>
-                    <div class="title pt-4 pb-1">Denim Dresses</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 55.0</div>
-                </div>
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-vector/realistic-liquid-marble-background-with-gold_23-2148897013.jpg?w=1380&t=st=1679046184~exp=1679046784~hmac=83756a866e55255e3cb25eb12108e657605a3d5254264171cafcce738ea6e796"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="tag bg-green">new</div>
-                    <div class="title pt-4 pb-1"> Empire Waist Dresses</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 70.0</div>
-                </div>
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-photo/blue-gold-marble-textured-background_53876-101585.jpg?w=1380&t=st=1679046223~exp=1679046823~hmac=472fe5fb08ce2829c60f0f0428959a36c89a15e9073849efb89a1c719c790189"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="title pt-4 pb-1">Pinafore Dresses</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 60.0</div>
-                </div>
-            </div>
-            <div class="row">
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-photo/black-marble-patterned-texture-background-marble-thailand-abstract-natural-marble-black-white-design_1253-917.jpg?w=1380&t=st=1679046047~exp=1679046647~hmac=5122f14e2928c6f4615a99fcbd76a576f27af833b87a7d04f30692c2a0f59889"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="tag bg-red">sale</div>
-                    <div class="title pt-4 pb-1">Winter Sweater</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 60.0</div>
-                </div>
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-photo/close-up-black-marble-textured-background_53876-63511.jpg?w=1380&t=st=1679046089~exp=1679046689~hmac=9bd70ae5347312da920f875920578529a785122b5e6b3ba5fd3ef99771fd2363"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="tag bg-black">out of stock</div>
-                    <div class="title pt-4 pb-1">Denim Dresses</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 55.0</div>
-                </div>
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-vector/realistic-liquid-marble-background-with-gold_23-2148897013.jpg?w=1380&t=st=1679046184~exp=1679046784~hmac=83756a866e55255e3cb25eb12108e657605a3d5254264171cafcce738ea6e796"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="tag bg-green">new</div>
-                    <div class="title pt-4 pb-1"> Empire Waist Dresses</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 70.0</div>
-                </div>
-                <div
-                    class="col-lg-3 col-sm-6 d-flex flex-column align-items-center justify-content-center product-item my-3  zoom-effect">
-                    <div class="product"> <img
-                            src="https://img.freepik.com/free-photo/blue-gold-marble-textured-background_53876-101585.jpg?w=1380&t=st=1679046223~exp=1679046823~hmac=472fe5fb08ce2829c60f0f0428959a36c89a15e9073849efb89a1c719c790189"
-                            alt="">
-                        <ul class="d-flex align-items-center justify-content-center list-unstyled icons">
-                            <li class="icon"><span class="fas fa-expand-arrows-alt"></span></li>
-                            <li class="icon mx-3"><span class="far fa-heart"></span></li>
-                            <li class="icon"><span class="fas fa-shopping-bag"></span></li>
-                        </ul>
-                    </div>
-                    <div class="title pt-4 pb-1">Pinafore Dresses</div>
-                    <div class="d-flex align-content-center justify-content-center"> <span class="fas fa-star"></span>
-                        <span class="fas fa-star"></span> <span class="fas fa-star"></span> <span
-                            class="fas fa-star"></span> <span class="fas fa-star"></span>
-                    </div>
-                    <div class="price">$ 60.0</div>
-                </div>
+                {% endfor %}
             </div>
         </div>
 
