--- a/templates/index.html
+++ b/templates/index.html
@@ -7,9 +7,10 @@
                 <div class="loader"></div>
             </div>
         </div>
+        
+         <!--Carousal section Start-->
 
-        <section class="py-0">
-           
+        <section class="py-0">  
             <div class="swiper theme-slider min-vh-100"
                 data-swiper='{"loop":true,"allowTouchMove":false,"autoplay":{"delay":5000},"effect":"fade","speed":800}'>
                 <div class="swiper-wrapper">
@@ -66,7 +67,10 @@
             </div>
         </section>
 
-        <!--Features One Start-->
+        <!--Carousal section Ends-->
+
+        <!--Our Product Start-->
+
         <section class="features-one clearfix back pt-6">
             <div class="container ">
                 <div class="row justify-content-center">
@@ -88,15 +92,12 @@
                                 </div>
                             </div>
 
-                            </a><!-- /.feature-one__single__more -->
+                            </a>
                         </div>
                     </div>
-                   
                     {% endfor %}
-                    
-
-                </div>
-                
+                    <!--End Single Features One-->
+                </div>        
             </div>
 
             <!-- About New section -->
@@ -120,60 +121,47 @@
                         </div>
                     </div>
                     <div class="row mt-5">
-
-
                         <div class="col-lg-4 col-md-4 col-sm-2 ">
-                            <div class="stats-box ">
-                                <!-- <i class="fas fa-chair"></i> -->
+                            <div class="stats-box ">                              
                                 <h1 id='stats-1'>
                                     <h6 class="plus">+</h6>
                                 </h1>
                                 <h4>Products</h4>
-
                             </div>
                         </div>
-
                         <div class="col-lg-4 col-md-4 col-sm-2">
                             <div class="stats-box">
-                                <!-- <i class="fas fa-microphone-alt"></i> -->
                                 <h1 id='stats-2'>
                                     <h6 class="plus">+</h6>
                                 </h1>
                                 <h4>Brands</h4>
-
                             </div>
                         </div>
-
                         <div class="col-lg-4 col-md-4 col-sm-2">
                             <div class="stats-box">
-                                <!-- <i class="fas fa-hourglass"></i> -->
                                 <h1 id='stats-3'>
                                     <h6 class="plus">+</h6>
                                 </h1>
                                 <h4>Projects</h4>
-
                             </div>
                         </div>
-
                     </div>
-
                 </div>
-
-
-
-
-
         </section>
 
+        <!-- About New section End-->
+
+        <!--Our Product End-->
+        
         <section class="back contact ">
-
-
-            <!-- new products -->
             <div class="row justify-content-center ">
                 <div class="col-md-10">
                     <h4 class=" text-center ls mb-5" style="color: brown;"> Latest Products</h4>
                 </div>
             </div>
+
+            <!--Latest Product section start-->
+        
             <div id="carouselExampleControls" class="carousel slide container" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -318,6 +306,8 @@
                     <span class="visually-hidden">Next</span>
                 </button>
             </div>
+
+            <!--Latest Product section end-->
 
             <!-- contact us -->
 
